Add missing properties to ConfigurationPlan
